--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "webpack serve --inline --hot",
     "build": "webpack",
     "run:dist": "http-server dist/",
-    "push": "git subtree push --prefix dist origin gh-pages"
+    "push": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "d1y",
@@ -18,6 +18,7 @@
     "@babel/preset-env": "^7.14.8",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^5.3.2",
     "node-polyfill-webpack-plugin": "^1.1.4",
     "webpack": "^5.46.0",
